@@ -1,5 +1,9 @@
 2009-01-22  Thomas Thurman  <tthurman@gnome.org>
 
+	* test/veracity/veracity.c: some basic option parsing
+
+2009-01-22  Thomas Thurman  <tthurman@gnome.org>
+
         Fix autotools thanks to Andreas Dalsgaard;
         fix veracity.c to let it compile under our setup.
 
